Fixes + addition of existing configuration state